--- a/storage/s3client_examples.ipynb
+++ b/storage/s3client_examples.ipynb
@@ -49,14 +49,15 @@
     "\n",
     "#Define client session\n",
     "session = boto3.session.Session(aws_access_key_id=key_id, \n",
-    "aws_secret_access_key=secret_key) \n",
+    "                                aws_secret_access_key=secret_key) \n",
     "\n",
     "#Define client connection\n",
     "s3_client = boto3.client('s3', aws_access_key_id=key_id, \n",
-    "aws_secret_access_key=secret_key,aws_session_token=None,\n",
-    "    config=boto3.session.Config(signature_version='s3v4'),\n",
-    "                        endpoint_url=endpoint,\n",
-    "                        region_name=region) "
+    "                         aws_secret_access_key=secret_key,\n",
+    "                         aws_session_token=None,\n",
+    "                         config=boto3.session.Config(signature_version='s3v4'),\n",
+    "                         endpoint_url=endpoint,\n",
+    "                         region_name=region) "
    ]
   },
   {
